--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "example"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start":"node web.js"
   },
   "repository": {
     "type": "git",
